--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
     "element-plus": "^2.7.6",
+    "express": "^4.19.2",
     "express-session": "^1.18.0",
     "mongodb": "^6.8.0",
-    "pinia": "^2.1.7",
+    "pinia": "^2.2.0",
     "vue": "^3.4.29",
     "vue-router": "^4.4.0"
   },
@@ -33,5 +36,10 @@
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1",
     "vitest": "^1.6.0"
-  }
+  },
+  "description": "This template should help get you started developing with Vue 3 in Vite.",
+  "main": "postcss.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
