--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-plus": "^2.7.6",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "gsap": "^3.12.5",
     "mongodb": "^6.8.0",
     "pinia": "^2.2.0",
     "vue": "^3.4.29",
