--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "deploy": "vue-cli-service build && gh-pages -d dist",
     "preview": "vite preview",
     "test:unit": "vitest",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
@@ -18,10 +17,12 @@
     "element-plus": "^2.7.6",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "flowbite": "^2.4.1",
     "gsap": "^3.12.5",
     "mongodb": "^6.8.0",
     "pinia": "^2.2.0",
     "vue": "^3.4.29",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
@@ -32,7 +33,6 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
-    "gh-pages": "^6.1.1",
     "jsdom": "^24.1.0",
     "postcss": "^8.4.39",
     "prettier": "^3.2.5",
